--- a/ilyes.ipynb
+++ b/ilyes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.setObjective( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) - max_i , GRB.MAXIMIZE)\n",
+    "model.setObjective( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) - max_i , GRB.MAXIMIZE)\n",
     "\n",
-    "model.setObjectiveN( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) , 0, GRB.MAXIMIZE)\n",
-    "model.setObjectiveN( max_i , 1, GRB.MINIMIZE)\n",
+    "# model.setObjectiveN( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) , 0, GRB.MAXIMIZE)\n",
+    "# model.setObjectiveN( max_i , 1, GRB.MINIMIZE)\n",
     "\n",
     "# Paramétrage (mode mute)\n",
     "model.params.outputflag = 0\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "63.0"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -368,17 +368,114 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>Job1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>Job1</td>\n",
+       "      <td>B</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>Job1</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>Job5</td>\n",
+       "      <td>C</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>Job5</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>Liam</td>\n",
+       "      <td>Job3</td>\n",
+       "      <td>A</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>Liam</td>\n",
+       "      <td>Job4</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>Liam</td>\n",
+       "      <td>Job4</td>\n",
+       "      <td>B</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>Job3</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>Job3</td>\n",
+       "      <td>C</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>Job4</td>\n",
+       "      <td>C</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [0, 1, 2, 3, 4]\n",
-       "Index: []"
+       "          0     1  2  3    4\n",
+       "1    Olivia  Job1  A  2  1.0\n",
+       "7    Olivia  Job1  B  3  1.0\n",
+       "10   Olivia  Job1  C  1  1.0\n",
+       "73   Olivia  Job5  C  4  1.0\n",
+       "74   Olivia  Job5  C  5  1.0\n",
+       "108    Liam  Job3  A  4  1.0\n",
+       "126    Liam  Job4  B  2  1.0\n",
+       "127    Liam  Job4  B  3  1.0\n",
+       "190    Emma  Job3  C  1  1.0\n",
+       "193    Emma  Job3  C  4  1.0\n",
+       "207    Emma  Job4  C  3  1.0"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,61 +520,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_ae607_row0_col0, #T_ae607_row0_col1, #T_ae607_row0_col2, #T_ae607_row0_col3, #T_ae607_row0_col4, #T_ae607_row1_col0, #T_ae607_row1_col1, #T_ae607_row1_col2, #T_ae607_row1_col3, #T_ae607_row1_col4, #T_ae607_row2_col0, #T_ae607_row2_col1, #T_ae607_row2_col2, #T_ae607_row2_col3, #T_ae607_row2_col4 {\n",
+       "#T_c18f5_row0_col0, #T_c18f5_row0_col1, #T_c18f5_row0_col2 {\n",
+       "  background-color: blue;\n",
+       "}\n",
+       "#T_c18f5_row0_col3, #T_c18f5_row0_col4 {\n",
+       "  background-color: green;\n",
+       "}\n",
+       "#T_c18f5_row1_col0, #T_c18f5_row2_col1 {\n",
+       "  background-color: red;\n",
+       "}\n",
+       "#T_c18f5_row1_col1, #T_c18f5_row1_col2, #T_c18f5_row2_col2 {\n",
+       "  background-color: yellow;\n",
+       "}\n",
+       "#T_c18f5_row1_col3, #T_c18f5_row2_col0, #T_c18f5_row2_col3 {\n",
+       "  background-color: orange;\n",
+       "}\n",
+       "#T_c18f5_row1_col4, #T_c18f5_row2_col4 {\n",
        "  background-color: white;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_ae607\">\n",
+       "<table id=\"T_c18f5\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ae607_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
-       "      <th id=\"T_ae607_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
-       "      <th id=\"T_ae607_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
-       "      <th id=\"T_ae607_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
-       "      <th id=\"T_ae607_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
+       "      <th id=\"T_c18f5_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
+       "      <th id=\"T_c18f5_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
+       "      <th id=\"T_c18f5_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
+       "      <th id=\"T_c18f5_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
+       "      <th id=\"T_c18f5_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae607_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
-       "      <td id=\"T_ae607_row0_col0\" class=\"data row0 col0\" >nan</td>\n",
-       "      <td id=\"T_ae607_row0_col1\" class=\"data row0 col1\" >nan</td>\n",
-       "      <td id=\"T_ae607_row0_col2\" class=\"data row0 col2\" >nan</td>\n",
-       "      <td id=\"T_ae607_row0_col3\" class=\"data row0 col3\" >nan</td>\n",
-       "      <td id=\"T_ae607_row0_col4\" class=\"data row0 col4\" >nan</td>\n",
+       "      <th id=\"T_c18f5_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
+       "      <td id=\"T_c18f5_row0_col0\" class=\"data row0 col0\" >Job1 C</td>\n",
+       "      <td id=\"T_c18f5_row0_col1\" class=\"data row0 col1\" >Job1 A</td>\n",
+       "      <td id=\"T_c18f5_row0_col2\" class=\"data row0 col2\" >Job1 B</td>\n",
+       "      <td id=\"T_c18f5_row0_col3\" class=\"data row0 col3\" >Job5 C</td>\n",
+       "      <td id=\"T_c18f5_row0_col4\" class=\"data row0 col4\" >Job5 C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae607_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
-       "      <td id=\"T_ae607_row1_col0\" class=\"data row1 col0\" >nan</td>\n",
-       "      <td id=\"T_ae607_row1_col1\" class=\"data row1 col1\" >nan</td>\n",
-       "      <td id=\"T_ae607_row1_col2\" class=\"data row1 col2\" >nan</td>\n",
-       "      <td id=\"T_ae607_row1_col3\" class=\"data row1 col3\" >nan</td>\n",
-       "      <td id=\"T_ae607_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
+       "      <th id=\"T_c18f5_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
+       "      <td id=\"T_c18f5_row1_col0\" class=\"data row1 col0\" >X</td>\n",
+       "      <td id=\"T_c18f5_row1_col1\" class=\"data row1 col1\" >Job4 B</td>\n",
+       "      <td id=\"T_c18f5_row1_col2\" class=\"data row1 col2\" >Job4 B</td>\n",
+       "      <td id=\"T_c18f5_row1_col3\" class=\"data row1 col3\" >Job3 A</td>\n",
+       "      <td id=\"T_c18f5_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ae607_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
-       "      <td id=\"T_ae607_row2_col0\" class=\"data row2 col0\" >nan</td>\n",
-       "      <td id=\"T_ae607_row2_col1\" class=\"data row2 col1\" >nan</td>\n",
-       "      <td id=\"T_ae607_row2_col2\" class=\"data row2 col2\" >nan</td>\n",
-       "      <td id=\"T_ae607_row2_col3\" class=\"data row2 col3\" >nan</td>\n",
-       "      <td id=\"T_ae607_row2_col4\" class=\"data row2 col4\" >nan</td>\n",
+       "      <th id=\"T_c18f5_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
+       "      <td id=\"T_c18f5_row2_col0\" class=\"data row2 col0\" >Job3 C</td>\n",
+       "      <td id=\"T_c18f5_row2_col1\" class=\"data row2 col1\" >X</td>\n",
+       "      <td id=\"T_c18f5_row2_col2\" class=\"data row2 col2\" >Job4 C</td>\n",
+       "      <td id=\"T_c18f5_row2_col3\" class=\"data row2 col3\" >Job3 C</td>\n",
+       "      <td id=\"T_c18f5_row2_col4\" class=\"data row2 col4\" >nan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2edc5143d90>"
+       "<pandas.io.formats.style.Styler at 0x2edc509a5b0>"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
