--- a/ilyes.ipynb
+++ b/ilyes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,27 +94,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Objective 1\n",
-    "H\n",
-    "Q\n",
-    "S\n",
-    "J\n",
+    "#### Objective 1\n",
+    "H : days\n",
     "\n",
-    "qi\n",
-    "qj\n",
-    "vi\n",
+    "Q : qualifications\n",
     "\n",
-    "njk\n",
+    "S : staff\n",
     "\n",
-    "cj\n",
-    "gj\n",
-    "dj\n",
+    "J : jobs\n",
     "\n",
-    "yj\n",
-    "lj\n",
-    "ej\n",
+    "qi : qualifications of i\n",
     "\n",
-    "pi_j_k_t"
+    "qj : qualifications of j\n",
+    "\n",
+    "vi : vacation days of i\n",
+    "\n",
+    "njk : required work load for j with k\n",
+    "\n",
+    "cj : daily penalty of j\n",
+    "\n",
+    "gj : gain of j\n",
+    "\n",
+    "dj : due date of j\n",
+    "\n",
+    "yj : is j completely done\n",
+    "\n",
+    "lj : delay in days for j\n",
+    "\n",
+    "ej : end date of j\n",
+    "\n",
+    "pi_j_k_t : work is done by i with k for j on t"
    ]
   },
   {
@@ -122,17 +131,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Objective 2\n",
-    "aij : j assigned to i, binary\n",
+    "#### Objective 2\n",
+    "aij : j is assigned to i\n",
     "\n",
-    "ni : number of jobs for i\n",
+    "ni : number of jobs i works on\n",
     "\n",
-    "max_i : max ni"
+    "max_i : max of ni"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objective 3\n",
+    "sj : start date for j\n",
+    "\n",
+    "nj : length in days for j\n",
+    "\n",
+    "max_j : maximum of nj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,22 +198,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add decision variables\n",
+    "# Objective 1\n",
     "pi_j_k_t = model.addVars(staff_names,job_list,qualifications,jour_list, vtype=GRB.BINARY, name=\"pi_k_j_c\")\n",
     "\n",
     "yj = model.addVars(job_list, vtype=GRB.BINARY, name=\"yj\")\n",
     "lj = model.addVars(job_list, vtype=GRB.INTEGER, name=\"lj\")\n",
     "ej = model.addVars(job_list, vtype=GRB.INTEGER, name=\"ej\")\n",
     "\n",
+    "# Objective 2\n",
     "max_i = model.addVar(vtype=GRB.INTEGER, name=\"max_i\")\n",
-    "\n",
     "ni = model.addVars(S, vtype=GRB.INTEGER, name=\"ni\")\n",
+    "aij = model.addVars(S, J, vtype=GRB.BINARY, name=\"aij\")\n",
     "\n",
-    "aij = model.addVars(S, J, vtype=GRB.BINARY, name=\"aij\")"
+    "# Objective 3\n",
+    "sj = model.addVars(J, vtype=GRB.INTEGER, name=\"sj\")\n",
+    "nj = model.addVars(J, vtype=GRB.INTEGER, name=\"nj\")\n",
+    "max_j = model.addVar(vtype=GRB.INTEGER, name=\"max_j\")"
    ]
   },
   {
@@ -202,8 +228,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objective 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +280,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objective 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,17 +315,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Objective 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start date of a job j is sj[j]\n",
+    "constr13 = {f'constr13{i}_{j}_{k}_{t}' : model.addConstr( sj[j] <= t*pi_j_k_t[i,j,k,t] + horizon*(1-pi_j_k_t[i,j,k,t]) , name = f\"constr13{i}_{j}_{k}_{t}\")\n",
+    "    for j in J\n",
+    "    for i in S\n",
+    "    for k in Q\n",
+    "    for t in H}\n",
+    "\n",
+    "# start date is at least 1\n",
+    "constr14 = {f'constr14{j}' : model.addConstr( 1 <= sj[j] , name = f\"constr14{j}\")\n",
+    "    for j in J}\n",
+    "\n",
+    "# length of a job j is nj[j]\n",
+    "constr15 = {f'constr15{j}' : model.addConstr( sj[j] + 1 - ej[j] <= nj[j] , name = f\"constr15{j}\")\n",
+    "    for j in J}\n",
+    "\n",
+    "# max_j max of nj[j]\n",
+    "constr16 = {f'constr16{j}' : model.addConstr( nj[j] <= max_j , name = f\"constr16{j}\")\n",
+    "    for j in J}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Objectives"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.setObjective( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) - max_i , GRB.MAXIMIZE)\n",
+    "# Objective 1\n",
+    "# model.setObjective( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) , GRB.MAXIMIZE)\n",
     "\n",
+    "# Objective 1 & 2\n",
+    "# model.setObjective( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) - max_i , GRB.MAXIMIZE)\n",
+    "\n",
+    "# Objective 1 & 2 & 3\n",
+    "model.setObjective( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) - max_i - max_j , GRB.MAXIMIZE)\n",
+    "\n",
+    "# setObjectiveN doesn't work\n",
     "# model.setObjectiveN( grb.quicksum((gj[j]*yj[j] - lj[j]*cj[j]) for j in J) , 0, GRB.MAXIMIZE)\n",
     "# model.setObjectiveN( max_i , 1, GRB.MINIMIZE)\n",
     "\n",
@@ -295,7 +379,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 456,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Job1': <gurobi.Var nj[Job1] (value 0.0)>,\n",
+       " 'Job2': <gurobi.Var nj[Job2] (value 0.0)>,\n",
+       " 'Job3': <gurobi.Var nj[Job3] (value 0.0)>,\n",
+       " 'Job4': <gurobi.Var nj[Job4] (value 0.0)>,\n",
+       " 'Job5': <gurobi.Var nj[Job5] (value -0.0)>}"
+      ]
+     },
+     "execution_count": 456,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 449,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +420,7 @@
        "63.0"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 450,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +581,7 @@
        "207    Emma  Job4  C  3  1.0"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 452,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,76 +626,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_c18f5_row0_col0, #T_c18f5_row0_col1, #T_c18f5_row0_col2 {\n",
+       "#T_8cb47_row0_col0, #T_8cb47_row0_col1, #T_8cb47_row0_col2 {\n",
        "  background-color: blue;\n",
        "}\n",
-       "#T_c18f5_row0_col3, #T_c18f5_row0_col4 {\n",
+       "#T_8cb47_row0_col3, #T_8cb47_row0_col4 {\n",
        "  background-color: green;\n",
        "}\n",
-       "#T_c18f5_row1_col0, #T_c18f5_row2_col1 {\n",
+       "#T_8cb47_row1_col0, #T_8cb47_row2_col1 {\n",
        "  background-color: red;\n",
        "}\n",
-       "#T_c18f5_row1_col1, #T_c18f5_row1_col2, #T_c18f5_row2_col2 {\n",
+       "#T_8cb47_row1_col1, #T_8cb47_row1_col2, #T_8cb47_row2_col2 {\n",
        "  background-color: yellow;\n",
        "}\n",
-       "#T_c18f5_row1_col3, #T_c18f5_row2_col0, #T_c18f5_row2_col3 {\n",
+       "#T_8cb47_row1_col3, #T_8cb47_row2_col0, #T_8cb47_row2_col3 {\n",
        "  background-color: orange;\n",
        "}\n",
-       "#T_c18f5_row1_col4, #T_c18f5_row2_col4 {\n",
+       "#T_8cb47_row1_col4, #T_8cb47_row2_col4 {\n",
        "  background-color: white;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_c18f5\">\n",
+       "<table id=\"T_8cb47\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_c18f5_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
-       "      <th id=\"T_c18f5_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
-       "      <th id=\"T_c18f5_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
-       "      <th id=\"T_c18f5_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
-       "      <th id=\"T_c18f5_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
+       "      <th id=\"T_8cb47_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
+       "      <th id=\"T_8cb47_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
+       "      <th id=\"T_8cb47_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
+       "      <th id=\"T_8cb47_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
+       "      <th id=\"T_8cb47_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_c18f5_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
-       "      <td id=\"T_c18f5_row0_col0\" class=\"data row0 col0\" >Job1 C</td>\n",
-       "      <td id=\"T_c18f5_row0_col1\" class=\"data row0 col1\" >Job1 A</td>\n",
-       "      <td id=\"T_c18f5_row0_col2\" class=\"data row0 col2\" >Job1 B</td>\n",
-       "      <td id=\"T_c18f5_row0_col3\" class=\"data row0 col3\" >Job5 C</td>\n",
-       "      <td id=\"T_c18f5_row0_col4\" class=\"data row0 col4\" >Job5 C</td>\n",
+       "      <th id=\"T_8cb47_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
+       "      <td id=\"T_8cb47_row0_col0\" class=\"data row0 col0\" >Job1 C</td>\n",
+       "      <td id=\"T_8cb47_row0_col1\" class=\"data row0 col1\" >Job1 A</td>\n",
+       "      <td id=\"T_8cb47_row0_col2\" class=\"data row0 col2\" >Job1 B</td>\n",
+       "      <td id=\"T_8cb47_row0_col3\" class=\"data row0 col3\" >Job5 C</td>\n",
+       "      <td id=\"T_8cb47_row0_col4\" class=\"data row0 col4\" >Job5 C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_c18f5_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
-       "      <td id=\"T_c18f5_row1_col0\" class=\"data row1 col0\" >X</td>\n",
-       "      <td id=\"T_c18f5_row1_col1\" class=\"data row1 col1\" >Job4 B</td>\n",
-       "      <td id=\"T_c18f5_row1_col2\" class=\"data row1 col2\" >Job4 B</td>\n",
-       "      <td id=\"T_c18f5_row1_col3\" class=\"data row1 col3\" >Job3 A</td>\n",
-       "      <td id=\"T_c18f5_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
+       "      <th id=\"T_8cb47_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
+       "      <td id=\"T_8cb47_row1_col0\" class=\"data row1 col0\" >X</td>\n",
+       "      <td id=\"T_8cb47_row1_col1\" class=\"data row1 col1\" >Job4 B</td>\n",
+       "      <td id=\"T_8cb47_row1_col2\" class=\"data row1 col2\" >Job4 B</td>\n",
+       "      <td id=\"T_8cb47_row1_col3\" class=\"data row1 col3\" >Job3 A</td>\n",
+       "      <td id=\"T_8cb47_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_c18f5_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
-       "      <td id=\"T_c18f5_row2_col0\" class=\"data row2 col0\" >Job3 C</td>\n",
-       "      <td id=\"T_c18f5_row2_col1\" class=\"data row2 col1\" >X</td>\n",
-       "      <td id=\"T_c18f5_row2_col2\" class=\"data row2 col2\" >Job4 C</td>\n",
-       "      <td id=\"T_c18f5_row2_col3\" class=\"data row2 col3\" >Job3 C</td>\n",
-       "      <td id=\"T_c18f5_row2_col4\" class=\"data row2 col4\" >nan</td>\n",
+       "      <th id=\"T_8cb47_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
+       "      <td id=\"T_8cb47_row2_col0\" class=\"data row2 col0\" >Job3 C</td>\n",
+       "      <td id=\"T_8cb47_row2_col1\" class=\"data row2 col1\" >X</td>\n",
+       "      <td id=\"T_8cb47_row2_col2\" class=\"data row2 col2\" >Job4 C</td>\n",
+       "      <td id=\"T_8cb47_row2_col3\" class=\"data row2 col3\" >Job3 C</td>\n",
+       "      <td id=\"T_8cb47_row2_col4\" class=\"data row2 col4\" >nan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2edc509a5b0>"
+       "<pandas.io.formats.style.Styler at 0x2edc512ac10>"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 454,
      "metadata": {},
      "output_type": "execute_result"
     }
