--- a/ilyes.ipynb
+++ b/ilyes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 777,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 778,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 779,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 780,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 781,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": 782,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,6 @@
     "aij = model.addVars(S, J, vtype=GRB.BINARY, name=\"aij\")\n",
     "\n",
     "# Objective 3\n",
-    "zijkt = model.addVars(S, J, Q, H, vtype=GRB.BINARY, name=\"zijkt\")\n",
     "sj = model.addVars(J, vtype=GRB.INTEGER, name=\"sj\")\n",
     "nj = model.addVars(J, vtype=GRB.INTEGER, name=\"nj\")\n",
     "max_j = model.addVar(vtype=GRB.INTEGER, name=\"max_j\")"
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 783,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 784,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,40 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # zijkt = 1 implies that pijkt = 1\n",
-    "# constr13 = {f'constr13{i}_{j}_{k}_{t}' : model.addConstr( zijkt[i,j,k,t] <= pijkt[i,j,k,t] , name = f\"constr13{i}_{j}_{k}_{t}\")\n",
-    "#     for i in S\n",
-    "#     for j in J\n",
-    "#     for k in Q\n",
-    "#     for t in H}\n",
-    "\n",
-    "# # there is exactly one zijkt equal to 1 for each j\n",
-    "# constr14 = {f'constr14_{j}' : model.addConstr( grb.quicksum(zijkt[i,j,k,t] for i in S for k in Q for t in H) == 1 , name = f\"constr14_{j}\")\n",
-    "#     for j in J}\n",
-    "\n",
-    "# # start date of j is nj[j] : at least t for the only chosen zijkt = 1 and at least 1 for all other zijkt\n",
-    "# constr15 = {f'constr15{i}_{j}_{k}_{t}' : model.addConstr( zijkt[i,j,k,t]*t + (1-zijkt[i,j,k,t]) <= sj[j] , name = f\"constr15{i}_{j}_{k}_{t}\")\n",
-    "#     for i in S\n",
-    "#     for j in J\n",
-    "#     for k in Q\n",
-    "#     for t in H}\n",
-    "\n",
-    "# # length of a job j is nj[j]\n",
-    "# constr16 = {f'constr16{j}' : model.addConstr( ej[j] + 1 - sj[j] <= nj[j] , name = f\"constr16{j}\")\n",
-    "#     for j in J}\n",
-    "\n",
-    "# # max_j max of nj[j]\n",
-    "# constr17 = {f'constr17{j}' : model.addConstr( nj[j] <= max_j , name = f\"constr17{j}\")\n",
-    "#     for j in J}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 785,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 786,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 787,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 788,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +400,7 @@
        "65.0"
       ]
      },
-     "execution_count": 749,
+     "execution_count": 788,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 789,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 790,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +561,7 @@
        "224    Emma  Job5  C  5  1.0"
       ]
      },
-     "execution_count": 751,
+     "execution_count": 790,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 791,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,76 +606,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 792,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_bb35c_row0_col0, #T_bb35c_row0_col1, #T_bb35c_row2_col0 {\n",
+       "#T_1035c_row0_col0, #T_1035c_row0_col1, #T_1035c_row2_col0 {\n",
        "  background-color: blue;\n",
        "}\n",
-       "#T_bb35c_row0_col2, #T_bb35c_row1_col1, #T_bb35c_row1_col2 {\n",
+       "#T_1035c_row0_col2, #T_1035c_row1_col1, #T_1035c_row1_col2 {\n",
        "  background-color: yellow;\n",
        "}\n",
-       "#T_bb35c_row0_col3, #T_bb35c_row1_col3, #T_bb35c_row2_col2 {\n",
+       "#T_1035c_row0_col3, #T_1035c_row1_col3, #T_1035c_row2_col2 {\n",
        "  background-color: orange;\n",
        "}\n",
-       "#T_bb35c_row0_col4, #T_bb35c_row1_col4 {\n",
+       "#T_1035c_row0_col4, #T_1035c_row1_col4 {\n",
        "  background-color: white;\n",
        "}\n",
-       "#T_bb35c_row1_col0, #T_bb35c_row2_col1 {\n",
+       "#T_1035c_row1_col0, #T_1035c_row2_col1 {\n",
        "  background-color: red;\n",
        "}\n",
-       "#T_bb35c_row2_col3, #T_bb35c_row2_col4 {\n",
+       "#T_1035c_row2_col3, #T_1035c_row2_col4 {\n",
        "  background-color: green;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_bb35c\">\n",
+       "<table id=\"T_1035c\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_bb35c_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
-       "      <th id=\"T_bb35c_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
-       "      <th id=\"T_bb35c_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
-       "      <th id=\"T_bb35c_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
-       "      <th id=\"T_bb35c_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
+       "      <th id=\"T_1035c_level0_col0\" class=\"col_heading level0 col0\" >1</th>\n",
+       "      <th id=\"T_1035c_level0_col1\" class=\"col_heading level0 col1\" >2</th>\n",
+       "      <th id=\"T_1035c_level0_col2\" class=\"col_heading level0 col2\" >3</th>\n",
+       "      <th id=\"T_1035c_level0_col3\" class=\"col_heading level0 col3\" >4</th>\n",
+       "      <th id=\"T_1035c_level0_col4\" class=\"col_heading level0 col4\" >5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_bb35c_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
-       "      <td id=\"T_bb35c_row0_col0\" class=\"data row0 col0\" >Job1 A</td>\n",
-       "      <td id=\"T_bb35c_row0_col1\" class=\"data row0 col1\" >Job1 B</td>\n",
-       "      <td id=\"T_bb35c_row0_col2\" class=\"data row0 col2\" >Job4 C</td>\n",
-       "      <td id=\"T_bb35c_row0_col3\" class=\"data row0 col3\" >Job3 C</td>\n",
-       "      <td id=\"T_bb35c_row0_col4\" class=\"data row0 col4\" >nan</td>\n",
+       "      <th id=\"T_1035c_level0_row0\" class=\"row_heading level0 row0\" >Olivia</th>\n",
+       "      <td id=\"T_1035c_row0_col0\" class=\"data row0 col0\" >Job1 A</td>\n",
+       "      <td id=\"T_1035c_row0_col1\" class=\"data row0 col1\" >Job1 B</td>\n",
+       "      <td id=\"T_1035c_row0_col2\" class=\"data row0 col2\" >Job4 C</td>\n",
+       "      <td id=\"T_1035c_row0_col3\" class=\"data row0 col3\" >Job3 C</td>\n",
+       "      <td id=\"T_1035c_row0_col4\" class=\"data row0 col4\" >nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_bb35c_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
-       "      <td id=\"T_bb35c_row1_col0\" class=\"data row1 col0\" >X</td>\n",
-       "      <td id=\"T_bb35c_row1_col1\" class=\"data row1 col1\" >Job4 B</td>\n",
-       "      <td id=\"T_bb35c_row1_col2\" class=\"data row1 col2\" >Job4 B</td>\n",
-       "      <td id=\"T_bb35c_row1_col3\" class=\"data row1 col3\" >Job3 A</td>\n",
-       "      <td id=\"T_bb35c_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
+       "      <th id=\"T_1035c_level0_row1\" class=\"row_heading level0 row1\" >Liam</th>\n",
+       "      <td id=\"T_1035c_row1_col0\" class=\"data row1 col0\" >X</td>\n",
+       "      <td id=\"T_1035c_row1_col1\" class=\"data row1 col1\" >Job4 B</td>\n",
+       "      <td id=\"T_1035c_row1_col2\" class=\"data row1 col2\" >Job4 B</td>\n",
+       "      <td id=\"T_1035c_row1_col3\" class=\"data row1 col3\" >Job3 A</td>\n",
+       "      <td id=\"T_1035c_row1_col4\" class=\"data row1 col4\" >nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_bb35c_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
-       "      <td id=\"T_bb35c_row2_col0\" class=\"data row2 col0\" >Job1 C</td>\n",
-       "      <td id=\"T_bb35c_row2_col1\" class=\"data row2 col1\" >X</td>\n",
-       "      <td id=\"T_bb35c_row2_col2\" class=\"data row2 col2\" >Job3 C</td>\n",
-       "      <td id=\"T_bb35c_row2_col3\" class=\"data row2 col3\" >Job5 C</td>\n",
-       "      <td id=\"T_bb35c_row2_col4\" class=\"data row2 col4\" >Job5 C</td>\n",
+       "      <th id=\"T_1035c_level0_row2\" class=\"row_heading level0 row2\" >Emma</th>\n",
+       "      <td id=\"T_1035c_row2_col0\" class=\"data row2 col0\" >Job1 C</td>\n",
+       "      <td id=\"T_1035c_row2_col1\" class=\"data row2 col1\" >X</td>\n",
+       "      <td id=\"T_1035c_row2_col2\" class=\"data row2 col2\" >Job3 C</td>\n",
+       "      <td id=\"T_1035c_row2_col3\" class=\"data row2 col3\" >Job5 C</td>\n",
+       "      <td id=\"T_1035c_row2_col4\" class=\"data row2 col4\" >Job5 C</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2edc5083190>"
+       "<pandas.io.formats.style.Styler at 0x2edc5190b20>"
       ]
      },
-     "execution_count": 753,
+     "execution_count": 792,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 793,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +711,7 @@
        " 'Job5': <gurobi.Var sj[Job5] (value 4.0)>}"
       ]
      },
-     "execution_count": 754,
+     "execution_count": 793,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 794,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +737,7 @@
        " 'Job5': <gurobi.Var ej[Job5] (value 5.0)>}"
       ]
      },
-     "execution_count": 755,
+     "execution_count": 794,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 795,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +762,7 @@
        " 'Job5': <gurobi.Var nj[Job5] (value 2.0)>}"
       ]
      },
-     "execution_count": 756,
+     "execution_count": 795,
      "metadata": {},
      "output_type": "execute_result"
     }
